--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
       </section>
       <section id="prep">
         <p class="preparation"><strong>Preparation time</strong></p>
-        <li><p><strong>Total:</strong> Approximately 10 minutes</p></li>
-        <li><p><strong>Preparation:</strong> 5 minutes</p></li>
-        <li><p><strong>Cooking:</strong> 5 minutes</p></li>
+        <ul>
+          <li><p><strong>Total:</strong> Approximately 10 minutes</p></li>
+          <li><p><strong>Preparation:</strong> 5 minutes</p></li>
+          <li><p><strong>Cooking:</strong> 5 minutes</p></li>
+        </ul>
       </section>
       <section id="ingr">
         <h2>Ingredients</h2>
@@ -69,10 +71,10 @@
         <p>The table below shows nutritional values per serving without the additional fillings.</p>
 
         <table>
-          <tr><td id="txt">Calories</td><td id="num">277kcal</td></tr>
-          <tr><td id="txt">Carbs</td><td id="num">0g</td></tr>
-          <tr><td id="txt">Protein</td><td id="num">20g</td></tr>
-          <tr><td id="txt">Fat</td><td id="num">22g</td></tr>
+          <tr><td class="txt">Calories</td><td class="num">277kcal</td></tr>
+          <tr><td class="txt">Carbs</td><td class="num">0g</td></tr>
+          <tr><td class="txt">Protein</td><td class="num">20g</td></tr>
+          <tr><td class="txt">Fat</td><td class="num">22g</td></tr>
         </table>
       </section>
     </main>
