--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </main>
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Marcos Leonardo Romero Granado</a>.
   </footer>
 </div>
 </body>
